--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
   <p>
     I am a Java/Spring Boot developer with over 20 years of experience delivering reliable, scalable, and high-performance web applications. I help businesses modernize legacy systems, optimize performance, and extend existing applications without costly rewrites.
     <br/><br/>
-    I worked on designing and implementing REST APIs with Spring Boot, fixing legacy and poorly performing backend code, API integrations with third-party systems, troubleshooting production issues and stabilizing systems.
+    I worked on designing and implementing <strong>REST APIs</strong> with <strong>Spring Boot</strong>, fixing legacy and poorly performing backend code, API integrations with third-party systems, troubleshooting production issues and stabilizing systems.
 
     <br/><br/>
-    As a front-end framework I used ZK. Having worked with ZK since version 3 through ZK 10, I bring deep technical insight and practical experience. Over the last 5 years, I have integrated Keikai into enterprise applications to deliver advanced spreadsheet-based business solutions.
+    As a front-end framework I use ZK. Having worked with ZK since version 3 through ZK 10, I bring deep technical insight and practical experience. Over the last 5 years, I have integrated Keikai into enterprise applications to deliver advanced spreadsheet-based business solutions.
     <br/><br/>
     Whether you need long-term support, performance optimization, or new feature development, I deliver clean, maintainable solutions across CRM, ERP, e-commerce, and custom systems — including third-party integrations, cloud services, and custom ZK components.
 	<br/><br/>
